# Petlove-Teste

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: health.py  routes.py
app/core/: config.py  gemini_client.py  logger.py  security.py
app/middleware/: logging_middleware.py
app/schemas/: __init__.py  question.py
tests/: test_api.py
