[project]
name = "petlove-teste"
version = "0.1.0"
description = "API de assistente usando FastAPI, Google Gemini e LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
]
